fix xpath because of core upgrade, Log -> Sign
Signed-off-by: Olivier Lamy <olamy@apache.org>